Fix header overflow issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,7 +93,7 @@ h1, h2 {
     float: left;
     line-height: 1em;
     margin: 10px 0 0 20px;
-    max-width: 265px;
+    max-width: 220px;
     width: auto;
 }
 
